fixed alignment issues for body of webpage

--- a/css/index.css
+++ b/css/index.css
@@ -206,16 +206,12 @@ nav a {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  border: 1px solid black;
 }
 .top-middle-border .introduction {
-  width: 100%;
-  height: 200px;
+  width: 48%;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  border: 1px solid red;
+  flex-direction: column;
+  border: 1px solid blue;
 }
 .top-middle-border .introduction h2 {
   font-size: 2rem;
@@ -228,62 +224,21 @@ nav a {
   font-family: Georgia;
 }
 .top-middle-border .skills {
-  width: 100%;
-  height: 200px;
+  width: 48%;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  border: 1px solid red;
-}
-.top-middle-border .skills .content {
-  display: flex;
-  align-items: center;
   flex-direction: column;
-  border: 1px solid black;
-  width: 20%;
-  height: 170px;
+  border: 1px solid green;
 }
 .top-middle-border .skills h2 {
   font-size: 2rem;
   color: #19c8eb;
   margin-bottom: 3%;
 }
-.top-middle-border .skills ul {
+.top-middle-border .skills ul li {
   font-size: 1rem;
   color: rgba(5, 5, 5, 0.904);
   font-family: Georgia;
 }
-/*.work-history {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid green;
-    height: 300px;
-    h2 {
-        .h2-style();
-    }*/
-/*.table-border {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        .table {
-            display: flex;
-            flex-direction: colunn;
-            align-items: center;
-            width: 100%;
-            margin: 0 auto;
-            border: 1px solid blue;
-            tr {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: space-evenly
-            }
-        }
-    }
-}*/
 .work-history {
   width: 100%;
   display: flex;
